zz-out/pass14_run2/zz-scripts/chapter01/plot_fig02_logistic_calibration.err
  File "/home/jplal/MCGT/zz-scripts/chapter01/plot_fig02_logistic_calibration.py", line 58
    parser.add_argument(
                       ^
SyntaxError: '(' was never closed
